// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AccountCard > renders correctly (snapshot) 1`] = `
<div
  class="group flex flex-col rounded-2xl border border-border/50 bg-card hover:border-primary/30 transition-all duration-300 hover:shadow-xl hover:shadow-primary/5 hover:-translate-y-1 overflow-hidden"
>
  <a
    class="flex flex-col flex-1"
    href="/contas/acc-1"
  >
    <div
      class="p-4 md:p-5 relative overflow-hidden"
      style="background-color: rgb(107, 53, 201);"
    >
      <div
        class="absolute -top-10 -right-10 w-24 h-24 bg-white/10 rounded-full blur-2xl group-hover:scale-125 transition-transform duration-500"
      />
      <div
        class="flex items-center justify-between gap-3 relative z-10"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="p-1 rounded-xl bg-white/15 backdrop-blur-sm flex items-center justify-center"
          >
            <div
              data-bank="nubank"
              data-testid="bank-icon"
            />
          </div>
          <div>
            <p
              class="font-display font-bold text-base tracking-tight"
              style="color: rgb(255, 255, 255);"
            >
              Conta Principal
            </p>
            <p
              class="text-sm uppercase font-bold tracking-widest opacity-80"
              style="color: rgb(255, 255, 255);"
            >
              Conta Corrente
            </p>
          </div>
        </div>
      </div>
      <div
        class="mt-4 md:mt-6 relative z-10"
      >
        <p
          class="text-sm uppercase tracking-wider font-bold opacity-75"
          style="color: rgb(255, 255, 255);"
        >
          Saldo Disponível
        </p>
        <p
          class="font-mono text-2xl sm:text-3xl font-black tracking-tight mt-1"
          style="color: rgb(255, 255, 255);"
        >
          R$ 2500.50
        </p>
      </div>
    </div>
    <div
      class="p-4 md:p-5 space-y-3.5 flex-1 bg-gradient-to-b from-card to-background border-t border-border/40"
    >
      <div
        class="flex items-center justify-between mb-1"
      >
        <p
          class="text-sm text-muted-foreground uppercase font-bold tracking-widest"
        >
          Últimas transações
        </p>
        <span
          class="text-sm text-primary font-bold flex items-center gap-0.5 opacity-0 group-hover:opacity-100 transition-opacity"
        >
          Ver tudo 
          <svg
            class="lucide lucide-arrow-right h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
        </span>
      </div>
      <div
        class="space-y-2.5"
      >
        <div
          class="flex items-center justify-between text-sm p-1.5 rounded-lg hover:bg-muted/50 transition-colors cursor-pointer"
        >
          <div
            class="flex items-center gap-2 flex-1 min-w-0"
          >
            <div
              class="p-1 rounded-md shrink-0 bg-negative/10 text-negative"
            >
              <svg
                class="lucide lucide-arrow-up-right h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 7h10v10"
                />
                <path
                  d="M7 17 17 7"
                />
              </svg>
            </div>
            <span
              class="truncate text-muted-foreground font-medium"
            >
              Supermercado
            </span>
          </div>
          <span
            class="font-mono font-bold ml-2 shrink-0 tabular-nums text-negative"
          >
            -
            R$ 150.00
          </span>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`AccountCard > renders international account (snapshot) 1`] = `
<div
  class="group flex flex-col rounded-2xl border border-border/50 bg-card hover:border-primary/30 transition-all duration-300 hover:shadow-xl hover:shadow-primary/5 hover:-translate-y-1 overflow-hidden"
>
  <a
    class="flex flex-col flex-1"
    href="/contas/acc-1"
  >
    <div
      class="p-4 md:p-5 relative overflow-hidden"
      style="background-color: rgb(107, 53, 201);"
    >
      <div
        class="absolute -top-10 -right-10 w-24 h-24 bg-white/10 rounded-full blur-2xl group-hover:scale-125 transition-transform duration-500"
      />
      <div
        class="flex items-center justify-between gap-3 relative z-10"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="p-1 rounded-xl bg-white/15 backdrop-blur-sm flex items-center justify-center"
          >
            <div
              data-bank="nubank"
              data-testid="bank-icon"
            />
          </div>
          <div>
            <p
              class="font-display font-bold text-base tracking-tight"
              style="color: rgb(255, 255, 255);"
            >
              Conta Principal
            </p>
            <p
              class="text-sm uppercase font-bold tracking-widest opacity-80"
              style="color: rgb(255, 255, 255);"
            >
              Conta Global
            </p>
          </div>
        </div>
        <span
          class="text-sm bg-white/20 dark:bg-black/20 px-2 py-0.5 rounded-full font-bold flex items-center gap-2 backdrop-blur-sm"
          style="color: rgb(255, 255, 255);"
        >
          <span>
            🇺🇸
          </span>
          USD
        </span>
      </div>
      <div
        class="mt-4 md:mt-6 relative z-10"
      >
        <p
          class="text-sm uppercase tracking-wider font-bold opacity-75"
          style="color: rgb(255, 255, 255);"
        >
          Saldo Disponível
        </p>
        <p
          class="font-mono text-2xl sm:text-3xl font-black tracking-tight mt-1"
          style="color: rgb(255, 255, 255);"
        >
          R$ 2,500.50
        </p>
      </div>
    </div>
    <div
      class="p-4 md:p-5 space-y-3.5 flex-1 bg-gradient-to-b from-card to-background border-t border-border/40"
    >
      <div
        class="flex items-center justify-between mb-1"
      >
        <p
          class="text-sm text-muted-foreground uppercase font-bold tracking-widest"
        >
          Últimas transações
        </p>
        <span
          class="text-sm text-primary font-bold flex items-center gap-0.5 opacity-0 group-hover:opacity-100 transition-opacity"
        >
          Ver tudo 
          <svg
            class="lucide lucide-arrow-right h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
        </span>
      </div>
      <div
        class="space-y-2.5"
      >
        <div
          class="flex items-center justify-between text-sm p-1.5 rounded-lg hover:bg-muted/50 transition-colors cursor-pointer"
        >
          <div
            class="flex items-center gap-2 flex-1 min-w-0"
          >
            <div
              class="p-1 rounded-md shrink-0 bg-negative/10 text-negative"
            >
              <svg
                class="lucide lucide-arrow-up-right h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 7h10v10"
                />
                <path
                  d="M7 17 17 7"
                />
              </svg>
            </div>
            <span
              class="truncate text-muted-foreground font-medium"
            >
              Supermercado
            </span>
          </div>
          <span
            class="font-mono font-bold ml-2 shrink-0 tabular-nums text-negative"
          >
            -
            R$
            150.00
          </span>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`AccountCard > renders with hidden balance (snapshot) 1`] = `
<div
  class="group flex flex-col rounded-2xl border border-border/50 bg-card hover:border-primary/30 transition-all duration-300 hover:shadow-xl hover:shadow-primary/5 hover:-translate-y-1 overflow-hidden"
>
  <a
    class="flex flex-col flex-1"
    href="/contas/acc-1"
  >
    <div
      class="p-4 md:p-5 relative overflow-hidden"
      style="background-color: rgb(107, 53, 201);"
    >
      <div
        class="absolute -top-10 -right-10 w-24 h-24 bg-white/10 rounded-full blur-2xl group-hover:scale-125 transition-transform duration-500"
      />
      <div
        class="flex items-center justify-between gap-3 relative z-10"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="p-1 rounded-xl bg-white/15 backdrop-blur-sm flex items-center justify-center"
          >
            <div
              data-bank="nubank"
              data-testid="bank-icon"
            />
          </div>
          <div>
            <p
              class="font-display font-bold text-base tracking-tight"
              style="color: rgb(255, 255, 255);"
            >
              Conta Principal
            </p>
            <p
              class="text-sm uppercase font-bold tracking-widest opacity-80"
              style="color: rgb(255, 255, 255);"
            >
              Conta Corrente
            </p>
          </div>
        </div>
      </div>
      <div
        class="mt-4 md:mt-6 relative z-10"
      >
        <p
          class="text-sm uppercase tracking-wider font-bold opacity-75"
          style="color: rgb(255, 255, 255);"
        >
          Saldo Disponível
        </p>
        <p
          class="font-mono text-2xl sm:text-3xl font-black tracking-tight mt-1 blur-md opacity-50 select-none"
          style="color: rgb(255, 255, 255);"
        >
          •••••
        </p>
      </div>
    </div>
    <div
      class="p-4 md:p-5 space-y-3.5 flex-1 bg-gradient-to-b from-card to-background border-t border-border/40"
    >
      <div
        class="flex items-center justify-between mb-1"
      >
        <p
          class="text-sm text-muted-foreground uppercase font-bold tracking-widest"
        >
          Últimas transações
        </p>
        <span
          class="text-sm text-primary font-bold flex items-center gap-0.5 opacity-0 group-hover:opacity-100 transition-opacity"
        >
          Ver tudo 
          <svg
            class="lucide lucide-arrow-right h-3 w-3"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5 12h14"
            />
            <path
              d="m12 5 7 7-7 7"
            />
          </svg>
        </span>
      </div>
      <div
        class="space-y-2.5"
      >
        <div
          class="flex items-center justify-between text-sm p-1.5 rounded-lg hover:bg-muted/50 transition-colors cursor-pointer"
        >
          <div
            class="flex items-center gap-2 flex-1 min-w-0"
          >
            <div
              class="p-1 rounded-md shrink-0 bg-negative/10 text-negative"
            >
              <svg
                class="lucide lucide-arrow-up-right h-3 w-3"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7 7h10v10"
                />
                <path
                  d="M7 17 17 7"
                />
              </svg>
            </div>
            <span
              class="truncate text-muted-foreground font-medium"
            >
              Supermercado
            </span>
          </div>
          <span
            class="font-mono font-bold ml-2 shrink-0 tabular-nums text-negative"
          >
            -
            R$ 150.00
          </span>
        </div>
      </div>
    </div>
  </a>
</div>
`;
